--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,10 @@
   </organization>
 
   <properties>
-    <maven.compiler.release>11</maven.compiler.release>
+    <java.version>11</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <maven.compiler.release>${java.version}</maven.compiler.release>
     <databricks-jdbc.version>2.6.34</databricks-jdbc.version>
   </properties>
 
